--- a/front/src/app/test-generator/test-preview/test-preview.component.html
+++ b/front/src/app/test-generator/test-preview/test-preview.component.html
@@ -1,3 +1,20 @@
-<p>
-  test-preview works!
-</p>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">試卷預覽</div>
+      <div class="panel-body">
+        <form role="form">
+          <div class="form-group" *ngFor="let question of questions; let i = index; let last = last;">
+            <label><pre>{{ i + 1 }}. {{ question.desc }}</pre></label>
+            <div class="checkbox" *ngFor="let answer of question.answers">
+              <label>
+                <input type="checkbox" [checked]="answer.correct" />{{ answer.desc }}
+              </label>
+            </div>
+            <hr />
+          </div>
+        </form>
+      </div>
+    </div>
+  </div><!-- /.col-->
+</div><!-- /.row -->
