使用 Bootstrap modal dialog & 加入 @types/jquery

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -74,5 +74,13 @@
       <li class="active">Icons</li>
     </ol>
   </div><!--/.row-->
+  <div id="errMsgModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+
+      <div class="alert bg-danger" role="alert">
+        <svg class="glyph stroked cancel"><use xlink:href="#stroked-cancel"></use></svg> <span id="errMsg">Welcome to the admin dashboard panel bootstrap template</span> <a href="javascript: return false;" class="pull-right" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
+      </div>
+    </div>
+  </div>
   <router-outlet></router-outlet>
 </div>	<!--/.main-->
