show multiple error message

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -76,9 +76,8 @@
   </div><!--/.row-->
   <div id="errMsgModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
-
       <div class="alert bg-danger" role="alert">
-        <svg class="glyph stroked cancel"><use xlink:href="#stroked-cancel"></use></svg> <span id="errMsg">Welcome to the admin dashboard panel bootstrap template</span> <a href="javascript: return false;" class="pull-right" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
+        <svg class="glyph stroked cancel"><use xlink:href="#stroked-cancel"></use></svg> <span class="errMsg"></span> <span class="pull-right btn-close-modal"><span class="glyphicon glyphicon-remove"></span></span>
       </div>
     </div>
   </div>
