--- a/front/src/app/test-generator/test-preview/test-preview.component.html
+++ b/front/src/app/test-generator/test-preview/test-preview.component.html
@@ -3,39 +3,47 @@
     <div class="panel panel-default">
       <div class="panel-heading">產製條件</div>
       <div class="panel-body">
-        <form role="form" class="form-horizontal">
-          <div class="form-group">
+        <form role="form" class="form-horizontal" [formGroup]="condForm" novalidate (ngSubmit)="generateTest()">
+          <div class="form-group" [ngClass]="{'has-error': getFieldInvalid('totalQuests')}">
             <label class="col-sm-2 control-label">題目數量</label>
-            <div class="col-sm-2"><input class="form-control" type="number" min="10" max="25" readonly="true" value="25" /></div>
+            <div class="col-sm-2"><input class="form-control" type="number" min="10" max="25" readonly="true" formControlName="totalQuests" /></div>
+            <div class="form-control-static" *ngIf="getFieldInvalid('totalQuests')">請輸入題目數量</div>
           </div>
-          <div class="form-group">
+          <div class="form-group" [ngClass]="{'has-error': getFieldInvalid('totalScore')}">
             <label class="col-sm-2 control-label">題目總分</label>
-            <div class="col-sm-2"><input class="form-control" type="number" min="100" max="100" readonly="true" value="100" /></div>
+            <div class="col-sm-2"><input class="form-control" type="number" min="100" max="100" readonly="true" formControlName="totalScore" /></div>
+            <div class="form-control-static" *ngIf="getFieldInvalid('totalScore')">請輸入題目總分</div>
           </div>
-          <div class="form-group">
+          <div class="form-group" [ngClass]="{'has-error': getFieldInvalid('cate_checked')}">
             <label class="col-sm-2 control-label">題目種類</label>
-            <div class="col-sm-10">
-              <div class="checkbox" *ngFor="let cate of categories">
+            <div class="col-sm-8" formArrayName="cate_checked">
+              <div class="checkbox" *ngFor="let cate of condForm.controls['cate_checked'].controls; let i = index">
                 <label>
-                  <input type="checkbox" name="cate_checked" [(ngModel)]="cate.checked" value="cate.oid" />{{ cate.desc }}
+                  <input type="checkbox" [formControlName]="i" />
+                  <span class="form-control-static">{{ categories[i].desc }}</span>
                 </label>
               </div>
+              <div class="form-control-static" *ngIf="getFieldInvalid('cate_checked')">請勾選題目種類</div>
             </div>
           </div>
-          <div class="form-group">
+          <div class="form-group" [ngClass]="{'has-error': getFieldInvalid('questLevelForm')}">
             <label class="col-sm-2 control-label" style="padding-top: 12px">難度及數量</label>
-            <div class="col-sm-10">
-              <div class="checkbox" *ngFor="let level of questLevel">
-                <label class="form-inline">
-                  <input class="form-control level-checkbox" type="checkbox" name="cate_checked" />
-                  <span class="form-control-static">{{ level.desc }} <input class="form-control level-amount" type="number" min="1" max="25" value="5" /></span>
+            <div class="col-sm-4" formArrayName="questLevelForm">
+              <div class="checkbox" *ngFor="let level of condForm.controls['questLevelForm'].controls; let i = index">
+                <label class="form-inline" [formGroupName]="i">
+                  <input class="form-control level-checkbox" type="checkbox" formControlName="level_checked" />
+                  <span class="form-control-static">
+                    {{ questLevels[i].desc }}
+                    <input class="form-control level-amount" type="number" formControlName="level_number" min="0" max="25" />
+                  </span>
                 </label>
               </div>
+              <div class="form-control-static" *ngIf="getFieldInvalid('questLevelForm')">請勾選難度及正確數量</div>
             </div>
           </div>
           <div class="form-group">
             <div class="col-sm-2 control-label">
-              <button type="button" class="btn btn-primary" (click)="generateTest()">產生試卷</button>
+              <button type="submit" class="btn btn-primary" [disabled]="condForm.invalid">產生試卷</button>
             </div>
           </div>
         </form>
