--- a/front/src/app/test-generator/test-preview/test-preview.component.html
+++ b/front/src/app/test-generator/test-preview/test-preview.component.html
@@ -14,6 +14,26 @@
             <div class="col-sm-2"><input class="form-control" type="number" min="100" max="100" readonly="true" formControlName="totalScore" /></div>
             <div class="form-control-static" *ngIf="getFieldInvalid('totalScore')">請輸入題目總分</div>
           </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">答題類型</label>
+            <div class="col-sm-8">
+              <div class="radio">
+                <label>
+                  <input type="radio" formControlName="answerType" [value]="null">不限制
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" formControlName="answerType" [value]="true">單選題
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" formControlName="answerType" [value]="false">複選題
+                </label>
+              </div>
+            </div>
+          </div>
           <div class="form-group" [ngClass]="{'has-error': getFieldInvalid('cate_checked')}" *ngIf="condForm.controls['cate_checked']">
             <label class="col-sm-2 control-label">題目種類</label>
             <div class="col-sm-8" formArrayName="cate_checked">
@@ -55,10 +75,9 @@
         <form role="form">
           <div class="form-group" *ngFor="let question of questions; let i = index; let last = last;">
             <label><pre>{{ i + 1 }}. {{ question.desc }}</pre></label>
-            <div><em>({{ question.questLevel.desc }})</em></div>
             <div class="checkbox" *ngFor="let answer of question.answers">
               <label>
-                <input type="checkbox" [checked]="answer.correct" onclick="return false;" />{{ answer.desc }}
+                <input type="checkbox" [checked]="answer.correct" onclick="return false;" />{{ answer.answerNo }}. {{ answer.desc }}
               </label>
             </div>
             <hr *ngIf="!last"/>
