查詢題目清單 (#1)

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -30,6 +30,7 @@
   </form>
   <ul class="nav menu">
     <li routerLinkActive="active"><a routerLink="/TestGenMgr/views"><svg class="glyph stroked clipboard with paper"><use xlink:href="#stroked-clipboard-with-paper"/></svg> 試卷產生</a></li>
+    <li routerLinkActive="active"><a routerLink="/TestGenMgr/admin"><svg class="glyph stroked pencil"><use xlink:href="#stroked-pencil"/></svg> 試卷管理</a></li>
     <!--
     <li class="active"><a href="index.html"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Dashboard</a></li>
     <li><a href="widgets.html"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Widgets</a></li>
